--- a/spec/config/mongoid_with_replicasets.yml
+++ b/spec/config/mongoid_with_replicasets.yml
@@ -1,8 +1,8 @@
 defaults: &defaults
   allow_read_secondary: true
   replica_set:
-    - uri : 'http://johnny:seed@localhost/'
-    - uri : 'http://johnny:seed@localhost:27018/'
+    - uri : 'http://johnny:seed@host.local/'
+    - uri : 'http://johnny:seed@host.local:27018/'
 test:
   <<: *defaults
   database: mongoid_config_test
